fix: text align in inline monaco

--- a/quadratic-client/src/app/gridGL/HTMLGrid/inlineEditor/inlineEditorStyles.scss
+++ b/quadratic-client/src/app/gridGL/HTMLGrid/inlineEditor/inlineEditorStyles.scss
@@ -1,3 +1,7 @@
+#cell-edit .monaco-editor[data-text-align] .view-line span {
+  display: contents;
+}
+
 #cell-edit .monaco-editor[data-text-align='left'] .view-line {
   text-align: left;
 }
